<resources>
    <string name="app_name">7 Minutes Workout</string>

    <string name="image">start image</string>
    <string name="start">START</string>
    <string name="get_ready_for">GET READY FOR</string>
    <string name="finish">FINISH</string>
    <string name="you_have_completed_the_workout">You have completed the workout!</string>
    <string name="congratulations">Congratulations!</string>
    <string name="end">END</string>
    <string name="calculator">Calculator</string>
    <string name="bmi">BMI</string>
    <string name="height_in_cm">HEIGHT (in cm)</string>
    <string name="weight_in_kg">WEIGHT (in kg)</string>
    <string name="your_bmi">YOUR BMI</string>
    <string name="calculate">CALCULATE</string>
    <string name="metric_units">METRIC UNITS</string>
    <string name="us_units">US UNITS</string>
    <string name="feet">Feet</string>
    <string name="inch">Inch</string>
    <string name="weight_in_pounds">WEIGHT (in pounds)</string>
    <string name="exercise_completed">EXERCISE COMPLETED</string>
    <string name="no_data_available">NO DATA AVAILABLE</string>
</resources>